--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -22,7 +22,7 @@ spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 
-spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8090/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.redirect-uri=https://dev.tft.p-e.kr/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.client-name=kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.client-id=307632e76fbc1389bc9e576b16717d8d
@@ -48,5 +48,5 @@ spring.servlet.multipart.max-file-size=10MB
 cloud.aws.credentials.access-key=${ACCESS-KEY}
 cloud.aws.credentials.secret-key=${SECRET-KEY}
 cloud.aws.region.static=ap-northeast-2
-cloud.aws.s3.bucket=ftfimages
+cloud.aws.s3.bucket=${BUCKET-NAME}
 cloud.aws.stack.auto=false
