--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,8 @@ dependencies {
     implementation 'net.coobird:thumbnailator:0.4.17'
 
     //아마존에서 사용하는 이미지 저장
-    implementation 'software.amazon.awssdk:s3:2.20.56'
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
   
 
