--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -46,3 +46,9 @@ spring.servlet.multipart.max-file-size=10MB
 
 com.project.upload.path=C:\\upload
 
+
+cloud.aws.credentials.access-key=${ACCESS-KEY}
+cloud.aws.credentials.secret-key=${SECRET-KEY}
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.s3.bucket=${BUCKET-NAME}
+cloud.aws.stack.auto=false
