--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ spring.application.name=REACT_TFT
 
 # datasource setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/webdb?serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://192.168.100.127:3306/webdb?serverTimezone=Asia/Seoul
 spring.datasource.username=spring
 spring.datasource.password=spring
 
@@ -45,9 +45,3 @@ spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
 
 com.project.upload.path=C:\\upload
-
-cloud.aws.credentials.access-key=123123
-cloud.aws.credentials.secret-key=123123
-cloud.aws.region.static=ap-northeast-2
-cloud.aws.s3.bucket=123123
-cloud.aws.stack.auto=false
