서버에러확인

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -45,8 +45,8 @@ spring.servlet.multipart.location=C:\\upload
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
 
-cloud.aws.credentials.access-key=${ACCESS-KEY}
-cloud.aws.credentials.secret-key=${SECRET-KEY}
+cloud.aws.credentials.access-key=${ACCESS_KEY}
+cloud.aws.credentials.secret-key=${SECRET_KEY}
 cloud.aws.region.static=ap-northeast-2
-cloud.aws.s3.bucket=${BUCKET-NAME}
+cloud.aws.s3.bucket=${BUCKET_NAME}
 cloud.aws.stack.auto=false
