--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -51,3 +51,5 @@ cloud.aws.credentials.secret-key=123123
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.s3.bucket=123123
 cloud.aws.stack.auto=false
+
+app.cookie.domain=tft.p-e.kr
